--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>My CV web</title>
   </head>
   <body bgcolor='#D5DBDB'>
-    <br>
-    <table>
-      <tr>
-        <td>
-    <h1><font color='#707B7C'>Justina Drevinskaite</font></h1>
-    <img src="images/avatar-1299805_960_720.png" width="150px" alt="">
-        </td>
-        <td>
-    <p> <strong> <em> This is my CV </em> </strong>
-  <a href="https://www.flavorwest.com/strawberry.html">  which I am doing on my course</a> </p>
-    <p><strong><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</em></strong> <br>
-       sed do eiusmod tempor incididunt ut labore et dolore magna <br>
-       aliqua. Ut enim ad <i>minim veniam,</i> quis nostrud exercitation <br>
-        ullamco laboris nisi ut aliquip ex ea commodo consequat.<br>
-         Duis aute irure dolor in reprehenderit in voluptate velit <br>
-         esse cillum dolore eu fugiat nulla pariatur. <br>
-          Excepteur sint occaecat cupidatat non proident,<br>
-           sunt in culpa qui officia deserunt mollit anim id est laborum.</p> <br>
-            </td>
-           </tr>
 
-      </table>
-     <ul>
+    <table>
+        <thead>
+            <tr>
+                <th colspan="2"><h1><font color='#707B7C'>Justina Drevinskaite</font></h1></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><img src="images/avatar-1299805_960_720.png" width="150px" alt=""></td>
+                <td><p> <strong> <em> This is my CV </em> </strong>
+              <a href="https://www.flavorwest.com/strawberry.html">  which I am doing on my course</a> </p>
+                <p><strong><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</em></strong> <br>
+                   sed do eiusmod tempor incididunt ut labore et dolore magna <br>
+                   aliqua. Ut enim ad <i>minim veniam,</i> quis nostrud exercitation <br>
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.<br>
+                     Duis aute irure dolor in reprehenderit in voluptate velit <br>
+                     esse cillum dolore eu fugiat nulla pariatur. <br>
+                      Excepteur sint occaecat cupidatat non proident,<br>
+                       sunt in culpa qui officia deserunt mollit anim id est laborum.</p> <br></td>
+            </tr>
+        </tbody>
+    </table>
+
+       <ul>
              <li><a href="index.html">Home</a></li>
              <li><a href="contact.html"> Contact</a></li>
              <li><a href="Projects.html"> Projects</a></li>
@@ -58,14 +60,14 @@
                 nisi ut aliquip ex ea commodo consequat.</li>
            </ol>
          <li> <strong> Structure </strong> </li>
-            <ol type='A'>
+          <ol type='A'>
              <li>Duis aute irure dolor in reprehenderit in voluptate velit  <br>
                   esse cillum dolore eu fugiat nulla pariatur.</li>
              <li>Duis aute irure dolor in reprehenderit in voluptate <br>
                 velit esse cillum dolore eu fugiat nulla pariatur.</li>
              <li>Duis aute irure dolor in reprehenderit in voluptate velit esse <br>
                 cillum dolore eu fugiat nulla pariatur.</li>
-           </ol>
+         </ol>
      </ul>
  </li>
 </ul>
