28/11/2019  changed tables of pages  made contact form

--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,42 @@
     <title>Contact me</title>
   </head>
   <body bgcolor='#D5D8DC'>
-    <h1> <font color='#707B7C'>Contact me :</font></h1>
+    <table  width='50%' cellpadding='10px' align='center'>
+      <thead>
+        <tr>
+
+          <td><a href="index.html">Home</a></td>
+          <td><a href="contact.html"> Contact</a></td>
+          <td><a href="Projects.html"> Projects</a></td>
+       </tr>
+
+    </thead>
+  </table>
+  <br>
+    <h1> <font color='#707B7C'>My Contacts :</font></h1>
       <ul>
         <li><a href="mailto:juka936@yahoo.com">Email : juka936@yahoo.com</a></li>
         <li><a href="tel:+447519615422">Phone: +447519615422</a></li>
         <li><a href="https://www.jukow.com">Website: www.jukow.com</a> </li>
       </ul>
-    <hr>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="contact.html"> Contact</a></li>
-        <li><a href="projects.html"> Projects</a></li>
-      </ul>
+<form action='http://ss1.ciwcertified.com/cgi-bin/process.pl' method='get'>
+<fieldset>
+<h2>Contact Me</h2>
+
+<legend>Feel Free to Contact Me </legend>
+  <label for='name'> Name: <br> </label>
+    <input id='firstname' type='text' name='name' placeholder='Name'> <br>
+  <label for ='surname'> Surname: </label> <br>
+    <input type='text' name='surname' placeholder='Surname'> <br>
+  <label> E-mail: </label> <br>
+    <input type="email" name='e-mail' placeholder='your@email.com'> <br>
+  <label for='messagge'> Leave messagge </label> <br>
+    <textarea id='messagge' name='messagge' rows="3" cols="55">
+    </textarea>
+  </label> <br>
+</fieldset> <br> <br>
+
+<input type='submit'><br>
+</form>
   </body>
 </html>
