--- a/projects.html
+++ b/projects.html
@@ -2,15 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <table  width='50%' cellpadding='10px' align='center'>
+      <thead
+        <tr>
+
+          <td><a href="index.html">Home</a></td>
+          <td><a href="contact.html"> Contact</a></td>
+          <td><a href="Projects.html"> Projects</a></td>
+       </tr>
     <title>Projects</title>
   </head>
+</table>
+</thead>
   <body bgcolor='#EAEDED'>
     <h1><font color='#707B7C'> Projects</font></h1>
     <hr>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="contact.html"> Contact</a></li>
-      <li><a href="projects.html"> Projects</a></li>
+      <li><a href="">Project #1</a></li>
+      <li><a href="">Project #2</a></li>
+      <li><a href="">Project #3</a></li>
     </ul>
   </body>
 </html>
