--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="utf-8">
     <title>My CV web</title>
   </head>
-  <body bgcolor='#D5DBDB'>
+  <body bgcolor='#B9D8F5'>
 
+    <table  width='50%' cellpadding='10px' align='center'>
+      <thead
+        <tr>
+
+          <td><a href="index.html">Home</a></td>
+          <td><a href="contact.html"> Contact</a></td>
+          <td><a href="Projects.html"> Projects</a></td>
+       </tr>
+  </thead>
     <table>
         <thead>
             <tr>
@@ -29,11 +38,7 @@
         </tbody>
     </table>
 
-       <ul>
-             <li><a href="index.html">Home</a></li>
-             <li><a href="contact.html"> Contact</a></li>
-             <li><a href="Projects.html"> Projects</a></li>
-       </ul>
+
 <hr>
 <h2> <em> Things I get used to do: </em> </h2>
 <ul type='none'>
