--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 
           <td><a href="index.html">Home</a></td>
           <td><a href="contact.html"> Contact</a></td>
-          <td><a href="Projects.html"> Projects</a></td>
+          <td><a href="projects.html"> Projects</a></td>
        </tr>
     <title>Projects</title>
   </head>
