--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
           <td><a href="index.html">Home</a></td>
           <td><a href="contact.html"> Contact</a></td>
-          <td><a href="Projects.html"> Projects</a></td>
+          <td><a href="projects.html"> Projects</a></td>
        </tr>
 
     </thead>
