--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>My CV web</title>
+    <link rel="stylesheet" href="style.css" >
   </head>
-  <body bgcolor='#B9D8F5'>
+  <body>
 
     <table  width='50%' cellpadding='10px' align='center'>
       <thead
@@ -18,7 +19,7 @@
     <table>
         <thead>
             <tr>
-                <th colspan="2"><h1><font color='#707B7C'>Justina Drevinskaite</font></h1></th>
+                <th colspan="2"><h1>Justina Drevinskaite</h1></th>
             </tr>
         </thead>
         <tbody>
